[package]
name = "pcp-protocol-client-core-util"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }


[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true, features = ["derive"] }
pcp-types = { workspace = true }

[lints]
workspace = true
