[package]
name = "pcp-types"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [[bin]]
# name = "test-pcp-settlement-client"
# path = "src/bin/e2e/test_client_settlement.rs"


[dependencies]
serde = { workspace = true }

[features]
default = ["eth"]
e2e = ["eth"]
eth = []
mock = []

[lints]
workspace = true
