[package]
name = "mcr-light-node-eth"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
clap = { workspace = true}
clap-markdown-ext = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
mcr-light-node-eth-emln-core = { workspace = true }
mcr-light-node-eth-exln-core = { workspace = true }
orfile = { workspace = true }
jsonlvar = { workspace = true }

[lints]
workspace = true
